# 3D-Printing-Order-Management

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  goals.md  requirements.md
electron/: main.cjs  preload.cjs
scripts/: generate-icons.ps1  make-ico.mjs
src/: main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: constants.ts  drag.ts  handlers.ts  init.ts  nav.ts  orders.ts  pending.ts  preview-generator.ts  preview.ts  render.ts  state.ts  theme.ts  utils.ts
